--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
     "webpack": "webpack --mode production"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
-    "eth-sig-util": "^2.1.2",
-    "husky": "^2.2.0",
-    "tronweb": "^2.6.1",
-    "web3": "^1.0.0-beta.54",
-    "webpack-cli": "^3.3.2"
+    "crypto-js": "^3.3.0",
+    "eth-sig-util": "^2.5.3",
+    "husky": "^2.7.0",
+    "tronweb": "^2.10.2",
+    "web3": "^1.2.9",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.0.0",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-env": "^7.10.3",
+    "babel-loader": "^8.1.0",
     "eslint": "^5.15.1",
     "eslint-plugin-node": "^8.0.1",
-    "lodash": "^4.17.13",
-    "mocha": "^5.1.1",
-    "nyc": "^14.1.0",
-    "webpack": "^4.32.2"
+    "lodash": "^4.17.15",
+    "mocha": "^8.0.1",
+    "nyc": "^14.1.1",
+    "webpack": "^4.43.0"
   },
   "repository": {
     "type": "git",
